--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,63 +1,104 @@
-cmake_minimum_required(VERSION 3.20)
-project(Silnik3D)
-
+cmake_minimum_required(VERSION 3.31)
+project(MyGLFWProject)
 set(CMAKE_CXX_STANDARD 20)
 
-# Ścieżki
-set(GLFW_PATH "${CMAKE_SOURCE_DIR}/libs/glfw")
-set(GLM_PATH "${CMAKE_SOURCE_DIR}/libs/glm")
-set(GLEW_PATH "${CMAKE_SOURCE_DIR}/libs/glew")
+if (UNIX) # dla sigm
+    # Try to find GLFW using pkg-config first (more reliable on Unix)
+    find_package(PkgConfig REQUIRED)
+    pkg_check_modules(GLFW3 REQUIRED glfw3)
 
-# Sprawdź czy biblioteki istnieją
-if(NOT EXISTS "${GLFW_PATH}")
-    message(FATAL_ERROR "GLFW not found at: ${GLFW_PATH}")
-endif()
+    find_package(OpenGL REQUIRED)
+    find_package(glm REQUIRED)
 
-if(NOT EXISTS "${GLM_PATH}")
-    message(FATAL_ERROR "GLM not found at: ${GLM_PATH}")
-endif()
+    # Find GLEW using pkg-config
+    pkg_check_modules(GLEW REQUIRED glew)
 
-if(NOT EXISTS "${GLEW_PATH}")
-    message(FATAL_ERROR "GLEW not found at: ${GLEW_PATH}")
-endif()
+    # Collect include directories
+    set(MY_INCLUDE_DIRS
+            ${GLFW3_INCLUDE_DIRS}
+            ${OPENGL_INCLUDE_DIR}
+            ${GLM_INCLUDE_DIR}
+            ${GLEW_INCLUDE_DIRS}
+    )
 
-message(STATUS "GLFW path: ${GLFW_PATH}")
-message(STATUS "GLM path: ${GLM_PATH}")
-message(STATUS "GLEW path: ${GLEW_PATH}")
+    # Collect libraries to link
+    set(MY_LIBRARIES
+            ${GLFW3_LIBRARIES}
+            ${OPENGL_LIBRARIES}
+            ${GLEW_LIBRARIES}
+    )
 
-# Wybierz bibliotekę GLFW
-if(EXISTS "${GLFW_PATH}/lib-mingw-w64/libglfw3.a")
-    set(GLFW_LIBRARY "${GLFW_PATH}/lib-mingw-w64/libglfw3.a")
-elseif(EXISTS "${GLFW_PATH}/lib-mingw-w64/libglfw3dll.a")
-    set(GLFW_LIBRARY "${GLFW_PATH}/lib-mingw-w64/libglfw3dll.a")
-else()
-    message(FATAL_ERROR "No GLFW library found")
-endif()
+    # Add link directories
+    set(MY_LINK_DIRECTORIES
+            ${GLFW3_LIBRARY_DIRS}
+            ${GLEW_LIBRARY_DIRS}
+    )
+endif (UNIX)
 
-# Pliki źródłowe
+if (WIN32) # dla szpontów
+    set(GLFW_PATH "${CMAKE_SOURCE_DIR}/libs/glfw")
+    set(GLM_PATH "${CMAKE_SOURCE_DIR}/libs/glm")
+    set(GLEW_PATH "${CMAKE_SOURCE_DIR}/libs/glew")
+
+    # Sprawdź czy biblioteki istnieją
+    if(NOT EXISTS "${GLFW_PATH}")
+        message(FATAL_ERROR "GLFW not found at: ${GLFW_PATH}")
+    endif()
+
+    if(NOT EXISTS "${GLM_PATH}")
+        message(FATAL_ERROR "GLM not found at: ${GLM_PATH}")
+    endif()
+
+    if(NOT EXISTS "${GLEW_PATH}")
+        message(FATAL_ERROR "GLEW not found at: ${GLEW_PATH}")
+    endif()
+
+    message(STATUS "GLFW path: ${GLFW_PATH}")
+    message(STATUS "GLM path: ${GLM_PATH}")
+    message(STATUS "GLEW path: ${GLEW_PATH}")
+
+    # Wybierz bibliotekę GLFW
+    if(EXISTS "${GLFW_PATH}/lib-mingw-w64/libglfw3.a")
+        set(GLFW_LIBRARY "${GLFW_PATH}/lib-mingw-w64/libglfw3.a")
+    elseif(EXISTS "${GLFW_PATH}/lib-mingw-w64/libglfw3dll.a")
+        set(GLFW_LIBRARY "${GLFW_PATH}/lib-mingw-w64/libglfw3dll.a")
+    else()
+        message(FATAL_ERROR "No GLFW library found")
+    endif()
+
+    # Collect include directories for Windows
+    set(MY_INCLUDE_DIRS
+            "${GLFW_PATH}/include"
+            "${GLM_PATH}"
+            "${GLEW_PATH}/include"
+    )
+
+    # Collect libraries to link for Windows
+    set(MY_LIBRARIES
+            ${GLFW_LIBRARY}
+            "${GLEW_PATH}/lib/Release/x64/glew32s.lib"
+            opengl32
+            gdi32
+    )
+endif(WIN32)
+
 add_executable(${PROJECT_NAME}
         main.cpp
         Engine.cpp
         GeometryRenderer.cpp
 )
 
-# Include directories
-target_include_directories(${PROJECT_NAME} PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}
-        "${GLFW_PATH}/include"
-        "${GLM_PATH}"
-        "${GLEW_PATH}/include"
-)
+# Add include directories
+target_include_directories(${PROJECT_NAME} PRIVATE ${MY_INCLUDE_DIRS})
 
-# Linkowanie
-target_link_libraries(${PROJECT_NAME}
-        ${GLFW_LIBRARY}
-        "${GLEW_PATH}/lib/Release/x64/glew32s.lib"  # Statyczna wersja GLEW
-        opengl32
-        gdi32
-)
+# Add link directories (for Unix)
+if (UNIX)
+    target_link_directories(${PROJECT_NAME} PRIVATE ${MY_LINK_DIRECTORIES})
+endif()
 
-# Definicje
+# Link libraries
+target_link_libraries(${PROJECT_NAME} ${MY_LIBRARIES})
+
 if(WIN32)
     add_definitions(-D_USE_MATH_DEFINES)
     add_definitions(-DGLEW_STATIC)  # Ważne dla statycznej wersji GLEW
@@ -65,5 +106,3 @@ endif()
 
 add_definitions(-DGLM_FORCE_RADIANS)
 add_definitions(-DGLM_ENABLE_EXPERIMENTAL)
-
-message(STATUS "Project configuration complete!")
